[package]
name = "path-utils"
version = "0.1.0"
description = "std::path utilities"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/rust-cli-enthusiasts/path-utils#readme"
repository = "https://github.com/rust-cli-enthusiasts/path-utils"
documentation = "https://docs.rs/path-utils"
keywords = ["path", "util", "utilities"]
categories = ["command-line-interface", "filesystem"]
edition = "2021"
rust-version = "1.56.0"
